# graphics

./: .gitignore  CMakeLists.txt  conanfile.txt  license.md  license.txt  main.cpp  readme.md
.github/workflows/: main.yml
models/: fish.mtl
resources/: icon.icns  macOS.plist  make_icns.sh
shaders/: fragment_fish.glsl  fragment_party_fish.glsl  fragment_simple.glsl  fragment_speaker.glsl  vertex_fish.glsl  vertex_simple.glsl  vertex_speaker.glsl
src/: initialize.cpp  initialize.h  initialize.hpp  main.cpp  render.cpp  render.h  settings.cpp  settings.h  settings.hpp  update.cpp  update.h
src/components/: components.cpp  components.hpp  model.h  physics.hpp  render.cpp  render.hpp
src/systems/: boids.cpp  boids.hpp  camera_orbit.cpp  camera_orbit.h  entity_control.cpp  entity_control.hpp  fish_population.cpp  fish_population.h  fish_population.hpp  physics.cpp  physics.hpp  render.cpp  render.h  render.hpp
src/util/: octree.cpp  octree.hpp
